Bug 371045. Firefox not firing focus event on application switching. r=ginn.chen